--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # Plant Disease Detection - Requirements
-# Compatible with Python 3.8+
+# Compatible with Python 3.13+
 
 # Web Application Framework
 streamlit
@@ -12,7 +12,8 @@ seaborn
 
 # Machine Learning Libraries
 scikit-learn
-tensorflow-cpu>=2.11.0
+--pre
+tensorflow>=2.15.0
 
 # Image Processing
 opencv-python
