--- a/requirements.txt
+++ b/requirements.txt
@@ -12,8 +12,7 @@ seaborn
 
 # Machine Learning Libraries
 scikit-learn
---pre
-tensorflow>=2.15.0
+tensorflow==2.15.0
 
 # Image Processing
 opencv-python
