--- a/requirements.txt
+++ b/requirements.txt
@@ -2,21 +2,21 @@
 # Compatible with Python 3.13+
 
 # Web Application Framework
-streamlit
+streamlit==1.45.1
 
 # Core Data Science Libraries
-numpy
-pandas
-matplotlib
-seaborn
+numpy==1.24.3
+pandas==2.0.3
+matplotlib==3.7.2
+seaborn==0.12.2
 
 # Machine Learning Libraries
-scikit-learn
-tensorflow>=2.11.0
+scikit-learn==1.3.0
+tensorflow==2.15.0
 
 # Image Processing
 opencv-python
-Pillow
+Pillow==10.0.0
 
 # Jupyter Notebook Interface (for development)
 ipywidgets
